--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col-lg-10">
                         <h2>Bekijk dit korte filmpje voor meer informatie (2min)</h2>
                         <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ki_0iES2cGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div>
+                            <iframe class="youtube-video" src="https://www.youtube.com/embed/Ki_0iES2cGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div>
                         </div>
                     <div class="col-lg-10">
                         <a class="btn btn-dark btn-xl" href="#aanmelding">Yes, ik doe mee!</a>
@@ -61,7 +61,10 @@
                 </div>
             </div>
         </section>       
-        
+        <style>.youtube-video {
+            aspect-ratio: 16 / 9;
+            width: 100%;
+          }</style>
         <!-- Aanmelding-->
         <section class="content-section bg-primary text-white text-center" id="aanmelding">
             <div class="container px-4 px-lg-5">
@@ -69,7 +72,7 @@
                     <h3 class="text-secondary mb-0">Aanmelding</h3>
                     <h2 class="mb-5">Vul het onderstaande formulier in om deel te nemen!</h2>
                 </div>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMHVltchhuv6ZDLvydeCDqWG4pAl4s9z3jb8z-wqgfyy6QKQ/viewform?embedded=true" width="380" height="1200" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>    
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMHVltchhuv6ZDLvydeCDqWG4pAl4s9z3jb8z-wqgfyy6QKQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>    
             </div>
         </section>
         
