--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     <h3 class="text-secondary mb-0">Aanmelding</h3>
                     <h2 class="mb-5">Vul het onderstaande formulier in om deel te nemen!</h2>
                 </div>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMHVltchhuv6ZDLvydeCDqWG4pAl4s9z3jb8z-wqgfyy6QKQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>    
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMHVltchhuv6ZDLvydeCDqWG4pAl4s9z3jb8z-wqgfyy6QKQ/viewform?embedded=true" width="100%" height="1300
+                %" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>    
             </div>
         </section>
         
