--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                             <!--<iframe class="youtube-video" src="https://www.youtube.com/embed/Ki_0iES2cGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div> -->
                             <iframe class = "youtube-video" src="https://erasmusmc.sharepoint.com/sites/Pharmacotherapy_ICT/_layouts/15/embed.aspx?UniqueId=e55a3b83-54e5-4756-9b1d-b94ce84f278d&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="853" height="480" frameborder="0" scrolling="no" allowfullscreen title="20230412_Intro_en_inclusie_MeaSureS_cohort_3_v1.mp4"></iframe>
                         </div>
-                    <div class="col-lg-10 align-items-center">
+                    </div>
+                    <div class="col-lg-10">
                         <a class="btn btn-dark btn-xl" href="#aanmelding">Yes, ik doe mee!</a>
                     </div>
                 </div>
