--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="col-lg-10">
-                        <a class="btn btn-dark btn-xl" href="#aanmelding">Yes, ik doe mee!</a>
+                        <a class="btn btn-dark btn-xl mt-2" href="#aanmelding">Yes, ik doe mee!</a>
                     </div>
                 </div>
             </div>
@@ -156,15 +156,15 @@
         </section>
     -->
         <!-- Call to Action-->
-        <!--
+
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+                <h2 class="mb-4">Heb je nog vragen? Neem dan contact op!</h2>
+                <href>s.elabdouni@erasmusmc.nl</href>
                 <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
                 <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
             </div>
         </section>
-    -->
         <!-- Map-->
         <!--
         <div class="map" id="contact">
