--- a/index.html
+++ b/index.html
@@ -157,12 +157,11 @@
     -->
         <!-- Call to Action-->
 
-        <section class="content-section bg-primary text-white">
+        <section class="content-section bg-secondary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Heb je nog vragen? Neem dan contact op!</h2>
-                <href>s.elabdouni@erasmusmc.nl</href>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+                <h2 style = "color: #343a40
+                ;" class="mb-4">Heb je nog vragen? Neem dan contact op!</h2>
+                <a style = "font-weight: bold; color: #343a40; text-decoration: none;"href="mailto: s.elabdouni@erasmusmc.nl">s.elabdouni@erasmusmc.nl</a>
             </div>
         </section>
         <!-- Map-->
